# API-Examples

Android/APIExample/app/: build.gradle
Android/APIExample/app/src/main/: AndroidManifest.xml
Android/APIExample/app/src/main/java/io/agora/api/example/examples/advanced/: SwitchCameraScreenShare.java  SwitchExternalVideo.java
Android/APIExample/app/src/main/res/layout/: fragment_rtmp_streaming.xml
Android/APIExample/app/src/main/res/values/: string_configs.xml
Android/APIExample/lib-component/: build.gradle
Android/APIExample/lib-stream-encrypt/: CMakeLists.txt  build.gradle
Android/APIExample/lib-stream-encrypt/src/main/cpp/: packet_processing_plugin_jni.cpp
Android/APIExample/lib-switch-external-video/src/main/java/io/agora/advancedvideo/externvideosource/: ExternalVideoInputManager.java  TextureIdHelp.java
iOS/: Podfile
iOS/APIExample.xcodeproj/: project.pbxproj
iOS/APIExample/Common/CustomEncryption/: AgoraCustomEncryption.h  AgoraCustomEncryption.mm
macOS/: Podfile
macOS/APIExample/Commons/CustomEncryption/: AgoraCustomEncryption.mm
macOS/APIExample/Examples/Advanced/StreamEncryption/: StreamEncryption.swift
windows/APIExample/APIExample/: APIExample.vcxproj
windows/APIExample/APIExample/Advanced/CustomEncrypt/: CAgoraCustomEncryptDlg.cpp  CAgoraCustomEncryptDlg.h
